# football

model/: pyproject.toml
model/core/: pitch_config.py  settings.py  tools.py
model/model/: embedding.py  inference.py  pitch.py  team_classifier.py  train.py
model/tests/: convert_keypoint_dataset.py
